--- a/final/index.html
+++ b/final/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link 
+      rel="stylesheet"
+      href="responsive.css" 
+      media="screen and (max-width: 768px)"
+    />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="print.css" media="print">
   </head>
   <body>
     <header>
@@ -61,6 +70,16 @@
     <main>
       <section class="cards">
         <div class="card">
+          <!--
+          <picture class="image" alt="Imagem">
+            <source media="(min-width: 768px)" srcset="https://i.ytimg.com/vi/GykTLqODQuU/maxresdefault.jpg">
+            <source media="(min-width: 320px)" srcset="https://i.ytimg.com/vi/rAzHvYnQ8DY/hqdefault.jpg">
+            <source media="(min-width: 10px)" srcset="https://i.ytimg.com/vi/HN1UjzRSdBk/mqdefault.jpg">
+            
+            <img src="https://i.ytimg.com/vi/GykTLqODQuU/hqdefault.jpg" alt="Imagem" />
+            </picture>
+
+          -->
           <div class="image">
             <img src="https://i.ytimg.com/vi/GykTLqODQuU/hqdefault.jpg" />
           </div>
@@ -133,5 +152,6 @@
     </div>
 
     <script src="scripts.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
