update images for inicial project

--- a/inicial/index.html
+++ b/inicial/index.html
@@ -8,7 +8,7 @@
     <header>
       <div class="container">
         <img
-          src="https://rocketseat.com.br/static/images/gostack/logo-rocketseat.svg"
+          src="./images/logo-rocketseat.svg"
           alt="Rocketseat"
         />
         <div class="menu-section">
@@ -52,7 +52,7 @@
           <a href="#" class="button">Quero embarcar neste foguete!</a>
         </div>
         <img
-          src="https://rocketseat.com.br/static/images/update/melhores-tecnologias.svg"
+          src="./images/melhores-tecnologias.svg"
           alt=""
         />
       </div>
