update images for final project

--- a/final/index.html
+++ b/final/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <link 
+    <link
       rel="stylesheet"
-      href="responsive.css" 
+      href="responsive.css"
       media="screen and (max-width: 768px)"
     />
 
@@ -17,7 +17,7 @@
     <header>
       <div class="container">
         <img
-          src="https://rocketseat.com.br/static/images/gostack/logo-rocketseat.svg"
+          src="./images/logo-rocketseat.svg"
           alt="Rocketseat"
         />
         <div class="menu-section">
@@ -61,7 +61,7 @@
           <a href="#" class="button">Quero embarcar neste foguete!</a>
         </div>
         <img
-          src="https://rocketseat.com.br/static/images/update/melhores-tecnologias.svg"
+          src="./images/melhores-tecnologias.svg"
           alt=""
         />
       </div>
@@ -75,7 +75,7 @@
             <source media="(min-width: 768px)" srcset="https://i.ytimg.com/vi/GykTLqODQuU/maxresdefault.jpg">
             <source media="(min-width: 320px)" srcset="https://i.ytimg.com/vi/rAzHvYnQ8DY/hqdefault.jpg">
             <source media="(min-width: 10px)" srcset="https://i.ytimg.com/vi/HN1UjzRSdBk/mqdefault.jpg">
-            
+
             <img src="https://i.ytimg.com/vi/GykTLqODQuU/hqdefault.jpg" alt="Imagem" />
             </picture>
 
