--- a/inicial/index.html
+++ b/inicial/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Document</title>
+    <title>Rocketseat</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
